# AlpcMonitor

./: .gitignore  ALPCMonitor.inf  ALPCMonitor.sln  ALPCMonitor.vcxproj  ALPCMonitor.vcxproj.filters  AlpcMonitor.c  CMakeLists.txt  README.md
driver/: CMakeLists.txt
driver/src/: AlpcMonitor.c
gui/: CMakeLists.txt
gui/src/: AlpcMonitorGUI.cpp  AlpcMonitorGUI.h  AlpcMonitorGUI.rc  EtwUsermodeStackCapture.cpp  EtwUsermodeStackCapture.h  FilterEngine.cpp  FilterEngine.h  Resource.h
shared/include/: AlpcIoctl.h  AlpcShared.h
